# SchemaGen

./: .gitignore
paper/: main.bib  (+4 more)
schema_graph_critic/: EXPERIMENTS.md  README.md  high_level_plan.md  pyproject.toml  requirements.txt  run_ablation.py  run_baselines.py  run_llm_pipeline.py  train.py  train_extended.py  training.md
schema_graph_critic/examples/: demo.py
schema_graph_critic/examples/schemas/: ecommerce_order.json  user_profile.json
schema_graph_critic/experiments/: run_ablation.py  run_all.sh  run_baselines.py  run_evaluation.py  run_llm_pipeline.py  run_per_corruption.py
schema_graph_critic/schema_graph_critic/: __init__.py  baselines.py  cli.py  corruptor.py  evaluate.py  llm_pipeline.py  model.py  parser.py  trainer.py  translator.py
schema_graph_critic/schema_miner/: README.md  miner.py  plan.md  requirements.txt
schema_graph_critic/schema_miner/mined_schemas/: .seen_hashes.json
schema_graph_critic/schema_miner/mined_schemas/wild_schemas/: 0bytes-security_discovery-ce__task.schema.json  0xHoneyJar_arrakis__.claude_schemas_trajectory-entry.schema.json  0xSmartCrypto_prism-contracts__contracts_prism-airdrop-registry_schema_query_msg.json  1099policy_openapi__spec3.json  221B-io_sql-json-schema__schema.schema.json  2nist_trkenv__schemas_manifest.schema.json  324-Papara_aw-2-caner24__Para.Api_Para.Schema_bin_Debug_net8.0_Para.Schema.deps.json  4g3nt81lly_UltiQuest-QBMS__backend_src_schemas_prairielearn_pl-question-data.schema.json  5c-git_client_marriator_front__app_requests__personal_getPlaceForTask_getPlaceForTaskSuccess.schema.json  ARK-Portal_data_model__model_json_schema_ark.BulkATAC-seqAssayMetadataTemplate.schema.json  ATSeeq_JSONBORN__src_assets_schema_elements_unit_1.0.1_categories_unit-momentum.schema.json  Access4Learning_JavaLibsA4L__SIFCommonsDemo_resources_examples_student.schema_resolved.json  Access4Learning_JavaLibsA4L__SIFCommonsDemo_resources_json_messages_MessageBaseType.json  AdityaPatange1_synthlite__samples_schemas_time-deity-convo.schema.json  AetherraLabs_Aetherra__docs_schemas_memory_item.schema.json  (+260 more)
schema_graph_critic/tests/: __init__.py  test_baselines.py  test_corruptor.py  test_evaluate.py  test_parser.py
(+11 files in other folders)
