[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-graph-critic"
version = "0.1.0"
description = "Neuro-Symbolic middleware for validating LLM-generated JSON Schemas using Graph Neural Networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SchemaGraph Team"}
]
keywords = ["json-schema", "gnn", "llm", "validation", "graph-neural-network", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "networkx>=3.1",
    "sentence-transformers>=2.2.0",
    "jsonschema>=4.17.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]

[project.scripts]
schema-critic = "schema_graph_critic.cli:main"

[project.urls]
Homepage = "https://github.com/schema-graph-critic/schema-graph-critic"
Documentation = "https://github.com/schema-graph-critic/schema-graph-critic#readme"
Repository = "https://github.com/schema-graph-critic/schema-graph-critic"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_graph_critic*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
